--- a/src/main/webapp/employee/create.xhtml
+++ b/src/main/webapp/employee/create.xhtml
@@ -9,51 +9,64 @@
 		<h1>Index Employees Create</h1>
 		<br />
 		<h:form class="form-horizontal">
-			
+
 			<div class="form-group">
-				<h:outputLabel for="nom" value="Nom : " styleClass="col-lg-2 control-label"/>
+				<h:outputLabel for="nom" value="Nom : "
+					styleClass="col-lg-2 control-label" />
 				<div class="col-lg-6">
-					<h:inputText label="Nom" id="nom" value="#{employeMB.employe.nom}" required="true" styleClass="form-control">
+					<h:inputText label="Nom" id="nom" value="#{employeMB.employe.nom}"
+						required="true" styleClass="form-control">
+						<f:validateLength minimum="3" />
+					</h:inputText>
+				</div>
+			</div>
+
+			<div class="form-group">
+				<h:outputLabel for="prenom" value="Prenom : "
+					styleClass="col-lg-2 control-label" />
+				<div class="col-lg-6">
+					<h:inputText label="Prenom" id="prenom"
+						value="#{employeMB.employe.prenom}" required="true"
+						styleClass="form-control">
+						<f:validateLength minimum="2" />
+					</h:inputText>
+				</div>
+			</div>
+
+			<div class="form-group">
+				<h:outputLabel for="login" value="Login : "
+					styleClass="col-lg-2 control-label" />
+				<div class="col-lg-6">
+					<h:inputText label="Login" id="login"
+						value="#{employeMB.employe.login}" required="true"
+						styleClass="form-control">
 						<f:validateLength minimum="5" />
 					</h:inputText>
 				</div>
 			</div>
-			
+
 			<div class="form-group">
-				<h:outputLabel for="prenom" value="Prenom : " styleClass="col-lg-2 control-label"/>
+				<h:outputLabel for="password" value="Password : "
+					styleClass="col-lg-2 control-label" />
 				<div class="col-lg-6">
-					<h:inputText label="Prenom" id="prenom" value="#{employeMB.employe.prenom}" required="true" styleClass="form-control">
+					<h:inputText label="Password" id="password"
+						value="#{employeMB.employe.password}" required="true"
+						styleClass="form-control">
 						<f:validateLength minimum="5" />
 					</h:inputText>
 				</div>
 			</div>
-	
-			<div class="form-group">
-				<h:outputLabel for="login" value="Login : " styleClass="col-lg-2 control-label"/>
-				<div class="col-lg-6">
-					<h:inputText label="Login" id="login" value="#{employeMB.employe.login}" required="true" styleClass="form-control">
-						<f:validateLength minimum="5" />
-					</h:inputText>
-				</div>
-			</div>
-	
-			<div class="form-group">
-				<h:outputLabel for="password" value="Password : " styleClass="col-lg-2 control-label"/>
-				<div class="col-lg-6">
-					<h:inputText label="Password" id="password" value="#{employeMB.employe.password}" required="true" styleClass="form-control">
-						<f:validateLength minimum="5" />
-					</h:inputText>
-				</div>
-			</div>
-			
+
 			<div class="form-group">
 				<div class="col-lg-offset-2 col-lg-6">
-					<h:commandButton id="create" value="Ajouter" action="#{employeMB.register}" ajax="false" styleClass="btn btn-primary" />
+					<h:commandButton id="create" value="Ajouter"
+						action="#{employeMB.register()}" ajax="false"
+						styleClass="btn btn-primary" />
 				</div>
 			</div>
-			
+
 			<h:messages />
-			
+
 		</h:form>
 	</ui:define>
 </ui:composition>
