Correction copier coller du DAO et jsf

--- a/src/main/webapp/mission/create.xhtml
+++ b/src/main/webapp/mission/create.xhtml
@@ -5,7 +5,7 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	template="/templates/default.xhtml">
 
-	<ui:param name="employeActive" value="active" />
+	<ui:param name="missionActive" value="active" />
 	<ui:define name="body">
 		<h1>Index Mission Create</h1>
 		<br />
@@ -58,7 +58,7 @@
 			<div class="form-group">
 				<div class="col-lg-offset-2 col-lg-6">
 					<h:commandButton id="create" value="Ajouter"
-						action="#{employeMB.register()}" ajax="false"
+						action="#{missionMB.register()}" ajax="false"
 						styleClass="btn btn-primary" />
 				</div>
 			</div>
