--- a/src/main/webapp/mission/list.xhtml
+++ b/src/main/webapp/mission/list.xhtml
@@ -5,9 +5,9 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	template="/templates/default.xhtml">
 
-	<ui:param name="employesActive" value="active" />
+	<ui:param name="missionsActive" value="active" />
 	<ui:define name="body">
-		<h1>List Employees</h1>
+		<h1>List Missions</h1>
 		<br />
 		<h:form id="form">
 			<p:dataTable id="dataTable" var="mission"
