--- a/src/main/webapp/employee/list.xhtml
+++ b/src/main/webapp/employee/list.xhtml
@@ -25,6 +25,8 @@
 
 				<p:column headerText="Action" colspan="2">
 					<h:commandLink action="#{employeMB.remove()}" value="Supp"></h:commandLink>
+					<td><h:commandLink action="#{employeMB.modify()}"
+							value="Modify"></h:commandLink></td>
 				</p:column>
 			</p:dataTable>
 
