--- a/src/main/webapp/mission/list.xhtml
+++ b/src/main/webapp/mission/list.xhtml
@@ -31,6 +31,8 @@
 
 				<p:column headerText="Action" colspan="2">
 					<h:commandLink action="#{missionMB.remove()}" value="Supp"></h:commandLink>
+					<td><h:commandLink action="#{missionMB.modify()}"
+							value="Modify"></h:commandLink></td>
 				</p:column>
 			</p:dataTable>
 
