--- a/src/main/webapp/adresse/list.xhtml
+++ b/src/main/webapp/adresse/list.xhtml
@@ -7,7 +7,7 @@
 
 	<ui:param name="adressesActive" value="active" />
 	<ui:define name="body">
-		<h1>List Missions</h1>
+		<h1>List Adresses</h1>
 		<br />
 		<h:form id="form">
 			<p:dataTable id="dataTable" var="adresse"
