--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -14,6 +14,10 @@
 					height="600" />
 			</div>
 
+			<h:outputText value="#{MeteoMB.city} " />
+			<h:outputText
+				value=" #{MeteoMB.temperature}F - #{MeteoMB.convertFtoC()}C" />
+
 		</h:form>
 	</ui:define>
 </ui:composition>
