--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -13,15 +13,15 @@
 				<img border="0" src="images/missions.jpg" alt="Mission" width="800"
 					height="600" />
 			</div>
-
-			<h:outputText value="#{MeteoMB.city} " />
-			<h:outputText
-				value=" #{MeteoMB.temperature}F - #{MeteoMB.convertFtoC()}C" />
-			<div>
+			<div class="form-group">
+				<h:outputText value="#{MeteoMB.city} "
+					styleClass="col-lg-2 control-label" />
+				<h:outputText
+					value=" #{MeteoMB.temperature}F - #{MeteoMB.convertFtoC()}C"
+					styleClass="col-lg-2 control-label" />
 				<img border="0" src="#{MeteoMB.iconeMeteo()}" alt="Meteo"
 					width="128" height="128" />
 			</div>
-
 		</h:form>
 	</ui:define>
 </ui:composition>
